# sqlserver-lite-query

./: .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: release.yml
public/parser/: TSqlLexer.g4
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  mod.rs
src-tauri/src/database/: mod.rs  sql_parser.rs
src/app/: globals.css  layout.tsx  page.tsx  themes.css
src/app/(routes)/connections/: page.tsx
src/app/(routes)/logs/: page.tsx
src/app/(routes)/scripts/: page.tsx
src/components/connection/: ConnectionDialog.tsx  ConnectionList.tsx
src/components/dashboard/: app-sidebar.tsx  mode-toggle.tsx  nav-main.tsx  search-form.tsx  site-header.tsx
src/components/session/: SessionContext.tsx  SessionSelector.tsx
src/components/sql/: EditorTabs.tsx  ResultPanel.tsx  SessionContext.tsx  SessionSelector.tsx  SqlEditor.tsx  WorkspaceSelector.tsx
src/components/ui/: active-theme.tsx  analytics-date-picker.tsx  calendar.tsx  client-layout.tsx  pagination.tsx  sidebar.tsx  theme-switcher.tsx
src/config/: metadata.ts  site.ts
src/hooks/: use-toast.ts  useConnections.ts  useQueryHistory.ts  useQuerySessions.ts  useSqlExecution.ts  useSqlTabs.ts
src/lib/: antlr-sqlparse.ts  antlr-sqlprompt.ts  api.ts  columnUtils.ts  formatUtils.ts  performanceUtils.ts  persistentCache.ts  sqlUtils.ts  sqlcache-manager.ts  sqlparse.ts  tauri.ts  utils.ts  workspace.ts
src/lib/antlr/: TSqlLexer.interp  TSqlLexer.ts  TSqlParser.interp  TSqlParserListener.ts  TSqlParserVisitor.ts
src/types/: database.ts  workspace.ts
(+6 files in other folders)
