[package]
name = "sqlserver-viewer-lite"
version = "0.1.0"
description = "SQL Server轻量级查询工具"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sqlserver_viewer_lite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SQL Server 连接驱动
tiberius = { version = "0.12.2", features = ["sql-browser-tokio", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
toml = "0.8"
dirs = "6.0"
dotenv = "0.15"
once_cell = "1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
sysinfo = "0.34.2"
futures = "0.3.31"
lazy_static = "1.4.0"
indexmap = {version = "2.9.0", features = ["serde"] }
backtrace = "0.3"
# SQL解析器
sqlparser = "0.49"
regex = "1.10"
rust_decimal = "1.37.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

